--- a/ui/src/styles.css
+++ b/ui/src/styles.css
@@ -29,6 +29,8 @@ html {
   font-size: 62.5%;
 }
 
+
+/*NOTIFICATION DESIGN*/
 .mat-simple-snackbar span {
   color: var(--third-color-sub);
   font-size: 2rem;
@@ -39,4 +41,10 @@ html {
 .failed {
   font-size: 2rem !important;
   background: #cd3301;
+}
+
+/*GENERAL ANIMATION*/
+@keyframes fadeIn {
+  0%   {opacity: 0}
+  100% {opacity: 1}
 }
