--- a/ui/src/app/posts-wrapper/posts-wrapper.component.html
+++ b/ui/src/app/posts-wrapper/posts-wrapper.component.html
@@ -3,5 +3,7 @@
     <h1>Search For General Sub Reddit..</h1>
     <img src="../../assets/home.png" alt="reddit home pic">
   </div>
-  <router-outlet *ngIf="hasPosts"></router-outlet>
+  <div class="body-page" *ngIf="hasPosts">
+    <router-outlet></router-outlet>
+  </div>
 </div>
