--- a/ui/src/app/posts-wrapper/posts/posts.component.css
+++ b/ui/src/app/posts-wrapper/posts/posts.component.css
@@ -1,3 +1,8 @@
+.general-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 mat-card {
   background-color: #eeebe9;
   width: 60%;
