--- a/ui/src/app/core/navbar/navbar.component.css
+++ b/ui/src/app/core/navbar/navbar.component.css
@@ -4,6 +4,7 @@
   background: var(--primary-color-main);
 
   position: relative;
+  box-shadow: 0px 13px 20px 2px rgba(0, 0, 0, 0.3);
 }
 
 /*NAVEBAR LOGO & TITLE PART*/
