--- a/ui/src/app/core/navbar/navbar.component.html
+++ b/ui/src/app/core/navbar/navbar.component.html
@@ -1,8 +1,8 @@
 <nav class="navbar">
-  <div class="navbar__header">
+  <a class="navbar__header">
     <img class="navbar__header--logo" src="../../../assets/logo.jpg" alt="reddit logo">
     <p class="navbar__header--title">REDDIT VIEWER</p>
-  </div>
+  </a>
 
   <div class="navbar__search">
     <form (ngSubmit)="searchResults(query.value)" #searchForm="ngForm">
