fix chart no data

--- a/ui/src/app/posts-wrapper/posts/chart/chart.component.html
+++ b/ui/src/app/posts-wrapper/posts/chart/chart.component.html
@@ -1,14 +1,17 @@
-<h1 style="margin: 2rem 0; text-align: center">The best time of day to release Post!</h1>
-<ngx-charts-bar-vertical
-  [view]="view"
-  [scheme]="colorScheme"
-  [results]="single"
-  [gradient]="gradient"
-  [xAxis]="showXAxis"
-  [yAxis]="showYAxis"
-  [legend]="showLegend"
-  [showXAxisLabel]="showXAxisLabel"
-  [showYAxisLabel]="showYAxisLabel"
-  [xAxisLabel]="xAxisLabel"
-  [yAxisLabel]="yAxisLabel">
-</ngx-charts-bar-vertical>
+<div *ngIf="single.length > 0; else noData">
+  <h1 style="margin: 2rem 0; text-align: center">The best time of day to release Post!</h1>
+  <ngx-charts-bar-vertical
+    [view]="view"
+    [scheme]="colorScheme"
+    [results]="single"
+    [gradient]="gradient"
+    [xAxis]="showXAxis"
+    [yAxis]="showYAxis"
+    [legend]="showLegend"
+    [showXAxisLabel]="showXAxisLabel"
+    [showYAxisLabel]="showYAxisLabel"
+    [xAxisLabel]="xAxisLabel"
+    [yAxisLabel]="yAxisLabel">
+  </ngx-charts-bar-vertical>
+</div>
+<ng-template #noData><h2>no Data for seeing Chart</h2></ng-template>
